Workspaces/TpFinal/.metadata/.plugins/org.eclipse.cdt.ui/ControlAcuario.build.log
15:59:49 **** Incremental Build of configuration Debug for project ControlAcuario ****
make -r all 
Building file: ../Control/src/cr_startup_lpc43xx.c
Invoking: MCU C Compiler
arm-none-eabi-gcc -D__MULTICORE_NONE -DDEBUG -D__CODE_RED -DCORE_M4 -D__USE_LPCOPEN -D__LPC43XX__ -D__REDLIB__ -I"/home/pato/Embebidos/TpFinal/Workspaces/TpFinal/lpc_chip_43xx/inc" -I"/home/pato/Embebidos/TpFinal/Workspaces/TpFinal/lpc_chip_43xx/inc/usbd" -I"/home/pato/Embebidos/TpFinal/Workspaces/TpFinal/ControlAcuario/lwIP/inc" -I"/home/pato/Embebidos/TpFinal/Workspaces/TpFinal/ControlAcuario/Control/inc" -I"/home/pato/Embebidos/TpFinal/Workspaces/TpFinal/ControlAcuario/Board/inc" -I"/home/pato/Embebidos/TpFinal/Workspaces/TpFinal/ControlAcuario/lwIP/inc/lwip" -I"/home/pato/Embebidos/TpFinal/Workspaces/TpFinal/ControlAcuario/freeRTOS/inc" -I"/home/pato/Embebidos/TpFinal/Workspaces/TpFinal/ControlAcuario/lwIP/inc/arch" -I"/home/pato/Embebidos/TpFinal/Workspaces/TpFinal/ControlAcuario/lwIP/inc/ipv4" -I"/home/pato/Embebidos/TpFinal/Workspaces/TpFinal/ControlAcuario/lwIP/inc/ipv4/lwip" -I"/home/pato/Embebidos/TpFinal/Workspaces/TpFinal/ControlAcuario/lwIP/inc/netif" -I"/home/pato/Embebidos/TpFinal/Workspaces/TpFinal/ControlAcuario/lwIP/inc/posix" -I"/home/pato/Embebidos/TpFinal/Workspaces/TpFinal/ControlAcuario/lwIP/inc/posix/sys" -O0 -g3 -Wall -c -fmessage-length=0 -fno-builtin -ffunction-sections -fdata-sections -mcpu=cortex-m4 -mfpu=fpv4-sp-d16 -mfloat-abi=softfp -mthumb -D__REDLIB__ -specs=redlib.specs -MMD -MP -MF"Control/src/cr_startup_lpc43xx.d" -MT"Control/src/cr_startup_lpc43xx.o" -MT"Control/src/cr_startup_lpc43xx.d" -o "Control/src/cr_startup_lpc43xx.o" "../Control/src/cr_startup_lpc43xx.c"
../Control/src/cr_startup_lpc43xx.c:61:13: error: missing binary operator before token "("
 #if !define (CRP_NO_CRP)
             ^
../Control/src/cr_startup_lpc43xx.c:65:70: error: 'CRP_NO_CRP' undeclared here (not in a function)
 __attribute__ ((used,section(".crp"))) const unsigned int CRP_WORD = CRP_NO_CRP ;
                                                                      ^
make: *** [Control/src/cr_startup_lpc43xx.o] Error 1

15:59:49 Build Finished (took 110ms)

